// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing FiguresCard component renders correctly flipped card 1`] = `
<styled.div
  flipped={true}
  onClick={[MockFunction]}
>
  <styled.div>
    <Figures />
    <styled.div>
      <BestTime />
      <Flips />
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`Testing FiguresCard component renders correctly unflipped card 1`] = `
<styled.div
  onClick={[MockFunction]}
>
  F
</styled.div>
`;
